Responsive design 1. mobile design fix: weird horizontal scrollbar shown in mobile. Forgot to use row-fluid together with container-fluid. Affected file: index.html. 2. fixed padding of filter section 3. added extra space in header by making 'Add NGO' button smaller in mobile mode 4. made map height smaller so that one can scroll down by touching the space below the map
New features
1. added filter button to header. Pressing it scrolls page to filter section. Scrolls differently depending on direction because the navbar gets hidden on scroll down but gets shown on scroll up.

Mods
1. changed 'loading' text to full-height loading gif. Full height hardcoded to 80%.
2. compacted the footer of the NGO template
3. refactored tabletop.js

--- a/v1/css/filter.css
+++ b/v1/css/filter.css
@@ -3,17 +3,17 @@
 }
 @media only screen and (min-width: 320px){
 	#filter-wrapper{
-		padding: 0 0 20px;
+		padding: 20px 5px;
 	}
 }
 @media only screen and (min-width: 480px){
 	#filter-wrapper{
-		padding: 0 50px 20px;
+		padding: 20px 50px;
 	}
 }
 @media only screen and (min-width: 768px){
 	#filter-wrapper{
-		padding: 0 100px 20px;
+		padding: 20px 100px;
 	}
 }
 span.cause-clickable:hover{
